Fixed the order and added z-index to child 2 to keep it front.

--- a/css/main.css
+++ b/css/main.css
@@ -48,12 +48,24 @@ html {
   left: 6em;
 }
 
+.polaroid:nth-child(1):hover {
+  transform: rotate(0deg);
+  z-index: 2000;
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 1.5);
+}
+
 .polaroid:nth-child(2) {
   transition: all 400ms linear;
   transform: rotate(5deg);
   position: absolute;
   top: 12em;
   left: 10em;
+  z-index: 1000;
+}
+.polaroid:nth-child(2):hover {
+  transform: rotate(0deg);
+  z-index: 1000;
+  box-shadow: 3px 3px 30px rgba(0, 0, 0, 1.5);
 }
 
 .polaroid:nth-child(3) {
@@ -68,16 +80,4 @@ html {
   transform: rotate(0deg);
   z-index: 1000;
   box-shadow: 3px 3px 30px rgba(0, 0, 0, .5);
-}
-
-.polaroid:nth-child(2):hover {
-  transform: rotate(0deg);
-  z-index: 1000;
-  box-shadow: 3px 3px 30px rgba(0, 0, 0, 1.5);
-}
-
-.polaroid:nth-child(1):hover {
-  transform: rotate(0deg);
-  z-index: 1000;
-  box-shadow: 3px 3px 30px rgba(0, 0, 0, 1.5);
 }
